# GPE_NAVZEN

./: README.md
GPE2_NAVZEN/back/gateway/NAVZEN-back/: .env  .gitignore  composer.json
GPE2_NAVZEN/back/gateway/NAVZEN-back/config/: routes.yaml  services.yaml
GPE2_NAVZEN/back/gateway/NAVZEN-back/config/jwt/: private.pem  (+1 more)
GPE2_NAVZEN/back/microservices/navigationservice/: .env  .gitignore  Cargo.toml  Readme.md
GPE2_NAVZEN/back/microservices/navigationservice/data/: SurfaceInfo.txt
GPE2_NAVZEN/back/microservices/navigationservice/src/: main.rs
GPE2_NAVZEN/back/microservices/navigationservice/src/config/: settings.rs
GPE2_NAVZEN/back/microservices/navigationservice/src/data/: loader.rs  mod.rs
GPE2_NAVZEN/back/microservices/navigationservice/src/navigation/: astar.rs  localization.rs  mod.rs
GPE2_NAVZEN/back/microservices/navigationservice/src/server/: app.rs
GPE2_NAVZEN/back/microservices/navigationservice/src/server/routes/: localization.rs  mod.rs  navigation.rs
GPE2_NAVZEN/back/microservices/navigationservice/src/services/: location_service.rs  mod.rs  pathfinding.rs
GPE2_NAVZEN/back/microservices/navigationservice/src/utils/: errors.rs  logger.rs
GPE2_NAVZEN/back/microservices/navigationservice/tests/: mod.rs
GPE2_NAVZEN/front/NAVZEN-front/: .env  .gitignore  App.js  app.json  babel.config.js  package-lock.json  package.json
GPE2_NAVZEN/front/NAVZEN-front/components/: CustomHeader.js
GPE2_NAVZEN/front/NAVZEN-front/navigation/: AppNavigator.js
GPE2_NAVZEN/front/NAVZEN-front/screens/: LoginScreen.js  RegisterScreen.js
autres/: script.py
(+4 files in other folders)
