[package]
name = "navigationservice"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"  # Framework Web pour API REST
dotenv = "0.15"   # Pour lire les variables d'environnement
image = "0.24"    # Manipulation d'images (PNG)
serde = { version = "1.0", features = ["derive"] }  # Sérialisation/désérialisation JSON
serde_json = "1.0"  # Gestion JSON
tokio = { version = "1", features = ["full"] }  # Runtime asynchrone
priority-queue = "1.3.2"  # Algorithme A* (File de priorité)
log = "0.4"  # Gestion des logs
env_logger = "0.9"  # Logger basé sur les variables d'environnement
postgres = "0.19"  # Connexion à PostgreSQL
sqlx = { version = "0.6", features = ["postgres", "runtime-tokio-native-tls"] }  # ORM pour PostgreSQL
rayon = "1.10.0"
